polished ui elements -added shadows -adjusted font and element sizes -changed font face -fixed camera stream portrait bug on mobile devices

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:ital,wght@0,400;1,800&family=Sigmar+One&display=swap');
+
 html,body{
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -13,15 +16,14 @@ body {
     width: 100vw;
     position: absolute;
     background-image: linear-gradient(to bottom right, #6b2cf5, #d450e6);
-    font-family: "Inter", sans-serif;
   }
 
   .inner-container {
     height: 80%;
-    width: 60%;
+    width: 50%;
     position: absolute;
     top: 10%;
-    left: 20%;
+    left: 25%;
     font-size: 8vw;
     color: black;
   }
@@ -38,19 +40,25 @@ body {
     align-items: center;
     text-align: center;
     color: black;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
 
   .title {
     flex-grow: 1;
     display: flex;
     align-items: center;
-    font-size: 5vh;
-    font-weight: bold;
+    font-size: 6vh;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    font-style: italic;
+    text-transform: uppercase;
   }
 
   .prompt {
     flex-grow: 4.5;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     font-size: 0.3em;
   }
@@ -59,6 +67,7 @@ body {
     border: 0;
     border-bottom: 2px solid black;
     text-align: center;
+    text-align-last:center;
     background: transparent;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -73,16 +82,16 @@ body {
   }
 
   .submit-btn {
-    border: 0.1em solid rgba(246, 172, 0, 0.883);
-    border-radius: 1em;
+    border: 2px solid rgba(246, 172, 0, 0.883);;
+    border-radius: 20px;
     padding-left: 2em;
     padding-right: 2em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     background-color: rgba(246, 172, 0, 0.863);
-    text-transform: uppercase;
     font-weight: bold;
     -webkit-appearance: none;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     font-size: 3vh;
     color: black;
     cursor: pointer;
@@ -116,6 +125,10 @@ body {
   .dropdown {
     font-size: 3vh;
   }
+  .title{
+    margin: 0.5em ;
+    font-size: 6vh;
+  }
 }
 
 /* Tablets and iPads portraits */
@@ -132,5 +145,9 @@ body {
   }
   .dropdown {
     font-size: 3vh;
+  }
+  .title{
+    margin: 0.5em ;
+    font-size: 4vh;
   }
 }
